# 15-puzzle-game

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
fifteen/: run.py
fifteen/game/: board.py  game.py  generator.py
fifteen/ui/: input_handler.py  renderer.py
tests/game/: test_board.py  test_game.py  test_generator.py
